tools: replace deprecated Thread.getId() call